Fixed FAQ spacing

--- a/app/assets/stylesheets/admin/cdx-editor/catalog-tool.sass
+++ b/app/assets/stylesheets/admin/cdx-editor/catalog-tool.sass
@@ -39,5 +39,9 @@
 
 // FIELDS
 .cdx-catalog
+  &__title
+    font-size: 1.6rem
+    margin: 12px 0
+
   &__search_wrapper
     margin-top: 15px
